syntax = "proto3";

package com.elbloquecadena.messages;




// Socket interface Messages
message Message {
	oneof value {
		MsgPing ping = 1;
		MsgPong pong = 2;
		MsgPeerDiscovery peerdiscovery = 3;
		MsgPeerExchange peerexchange = 4;
		MsgHello hello = 5;
	}
}

message MsgPing {
	string msgid = 1;
}

message MsgPong {
	string msgid = 1;
}

message MsgPeerDiscovery {
	string msgid = 1;
}

message MsgPeerExchange {
	string msgid = 1;
	repeated MPeer peers = 2;
}

message MsgHello {
	MPeer myself = 1;
}


// Data Types

message MPeer {
	string host = 1;
	int32 port = 2;
	bytes pubkey = 3;
}